# controllers/bookControl.js
@@ -2,45 +2,66 @@ const { response } = require('express');
 const mongodb = require('../dataBase/connect');
 const ObjectId = require('mongodb').ObjectId;
 
-const getData = (req, res) => {
- mongodb.getDb().db().collection('books').find()
-  .toArray((err, lists) => {
-    if (err) {
-      res.status(400).json({ message: err });
-    }
+// const getData = (req, res) => {
+//  mongodb.getDb().db().collection('books').find()
+//   .toArray((err, lists) => {
+//     if (err) {
+//       return res.status(400).json({ message: err });
+//     }
   
+//     res.setHeader('Content-Type', 'application/json');
+//     return res.status(200).json(lists); // we just need the first one (the only one)
+//   });
+// };
+
+// const getAll = (req, res) => {
+//  mongodb.getDb().db().collection('books').find()
+//   .toArray((err, lists) => {
+//     if (err) {
+//       return res.status(400).json({ message: err });
+//     }
+  
+//     res.setHeader('Content-Type', 'application/json');
+//     return res.status(200).json(lists); // we just need the first one (the only one)
+//   });
+// };
+
+const getAll = async (req, res) => {
+  try {
+    const db = mongodb.getDb();
+    const lists = await db.collection('books').find().toArray();
     res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(lists); // we just need the first one (the only one)
-  });
+    return res.status(200).json(lists);
+  } catch (err) {
+    return res.status(500).json({ message: err.message || err });
+  }
 };
 
-const getAll = (req, res) => {
- mongodb.getDb().db().collection('books').find()
-  .toArray((err, lists) => {
-    if (err) {
-      res.status(400).json({ message: err });
+const getData = getAll; 
+
+const getSingle = async (req, res) => {
+    try {
+        if (!ObjectId.isValid(req.params.id)) {
+            return res.status(400).json('Must use a valid book id to find a book.');
+        }
+        const id = new ObjectId(req.params.id);
+        const db = mongodb.getDb();
+        const lists = await db.collection('books').find({ _id: id }).toArray();
+        res.setHeader('Content-Type', 'application/json');
+        return res.status(200).json(lists[0]);
+    } catch (err) {
+        return res.status(500).json({ message: err.message || err });
     }
-  
-    res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(lists); // we just need the first one (the only one)
-  });
 };
 
-const getSingle = (req, res) => {
-    if (!ObjectId.isValid(req.params.id)) {
-        res.status(400).json('Must use a valid book id to find a book.');
-    }
-    const id = new ObjectId(req.params.id);
-    mongodb.getDb().db().collection('books').find({ _id: id })
-      .toArray((err, lists) => {
-    if (err) {
-      res.status(400).json({ message: err });
-    }
+//     if (err) {
+//       return res.status(400).json({ message: err });
+//     }
   
-    res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(lists[0]); // we just need the first one (the only one)
-  });
-};
+//     res.setHeader('Content-Type', 'application/json');
+//     return res.status(200).json(lists[0]); // we just need the first one (the only one)
+//   });
+// };
 
 const createBook = async (req, res) => {
     const book = {
@@ -52,7 +73,7 @@ const createBook = async (req, res) => {
         publisher: req.body.publisher,
         publicationDate: req.body.publicationDate
     };
-    const result = await mongodb.getDb().db().collection('books').insertOne(book);
+    const result = await mongodb.getDb().collection('books').insertOne(book);
     if (result.acknowledged) {
         res.status(204).send();
     } else {        res.status(500).json(result.error || 'Some error occurred while creating the book.');
@@ -65,13 +86,15 @@ const updateBook = async (req, res) => {
     }
     const id = new ObjectId(req.params.id);
     const book = {
-        firstName: req.body.firstName,
-        lastName: req.body.lastName,
-        email: req.body.email,
-        favoriteColor: req.body.favoriteColor,
-        birthday: req.body.birthday
+        name: req.body.name,
+        authorName: req.body.authorName,
+        genre: req.body.genre,
+        pageCount: req.body.pageCount,
+        price: req.body.price,
+        publisher: req.body.publisher,
+        publicationDate: req.body.publicationDate
     };
-    const result = await mongodb.getDb().db().collection('books').updateOne({ _id: id }, { $set: book });
+    const result = await mongodb.getDb().collection('books').updateOne({ _id: id }, { $set: book });
     if (result.modifiedCount > 0) {
         res.status(204).send();
     } else {        res.status(500).json(result.error || 'Some error occurred while updating the book.');
@@ -83,7 +106,7 @@ const deleteBook = async (req, res) => {
         res.status(400).json('Must use a valid book id to delete a book.');
     }
     const id = new ObjectId(req.params.id);
-    const result = await mongodb.getDb().db().collection('books').deleteOne({ _id: id });
+    const result = await mongodb.getDb().collection('books').deleteOne({ _id: id });
     if (result.deletedCount > 0) {
         res.status(204).send();
     } else {        res.status(500).json(result.error || 'Some error occurred while deleting the book.');
